[package]
name = "vrchat-log"
version = "0.1.3"
authors = ["sksat <sksat@sksat.net>"]
edition = "2018"
license = "MIT"

categories = ["parsing"]
keywords = ["vrchat"]
readme = "README.md"
description = "VRChat output log parser"
repository = "https://github.com/sk2sat/vrchat-log-rs"

[dependencies]
chrono = "0.4.19"
enum-as-inner = "0.3.3"
strum = "0.20.0"
strum_macros = "0.20.1"
